[package]
name = "sovereign-adr"
version = "0.1.0"
edition = "2021"
description = "Boundary Lattice G=Px|G|=12288, URef 11 involutions"
license = "MIT OR Apache-2.0"
authors = ["SnapKitty Collective"]
repository = "https://github.com/SNAPKITTYWEST/sovereign-adr"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
